--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,19 @@
 <resources>
     <string name="app_name">Expense Manager</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="income">Income</string>
     <string name="expenses">Expenses</string>
     <string name="balance">Balance</string>
+    <string name="add_transaction">Add Transaction</string>
+    <string name="transaction_type">Transaction Type</string>
+    <string name="amount">Amount</string>
+    <string name="add">Add</string>
+    <string name="description">Description</string>
+
+    <string name="error_message_transaction_type">Please select transaction type</string>
+    <string name="error_message_transaction_description">Please enter valid description</string>
+    <string name="error_message_transaction_amount">Please enter valid amount</string>
+
+    <string name="transaction_successful">Transaction successfully added</string>
 </resources>
