--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="error_message_transaction_amount">Please enter valid amount</string>
 
     <string name="transaction_successful">Transaction successfully added</string>
+    <string name="empty_transactions">No transactions available!\nTry adding transactions from "+" button at the bottom.</string>
 </resources>
